fixing another minor bug with overflow :)

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@
 body {
 	overflow-x: hidden;
 } */
+
+html {
+	height: 100%;
+	width: 100%;
+}
